[package]
name = "marker"
version = "0.10.0-dev"
authors = ["Alex Crawford <alex.crawford@coreos.com>"]
description = "Tool for finding issues in CommonMark documents"
repository = "https://github.com/crawford/marker"
readme = "README.md"
keywords = ["commonmark", "markdown", "links", "validate"]
license = "Apache-2.0"
edition = "2018"
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.4.6", features = ["cargo", "derive"] }
pulldown-cmark = "0.6.0"
rayon = "^1.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
url = "2.4.1"
walkdir = "^2.0"
